# keystone-api

./: .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: Build.yml  Publish.yml  QA.yml  Release.yml  Test.yml
conf/: entrypoint.sh  mime.types  nginx.conf
developer/: design_guidelines.md  project_setup.md
docs/: api.yml  index.md
docs/api/: authentication.md  batch_jobs.md  filtering.md  index.html  logging.md  openapi.md  openapi.yml  permissions.md  plugins.js  swagger.html
docs/developer/: common.md  design_guidelines.md  project_setup.md
docs/install/: docker.md  python.md  settings.md  slurm.md  systemd.md
docs/setup/: email.md  notification.md  settings.md  tasks.md
keystone_api/: manage.py
keystone_api/apps/allocations/: admin.py  factories.py  managers.py  models.py  nested.py  permissions.py  serializers.py  shortcuts.py  urls.py  views.py
keystone_api/apps/allocations/migrations/: 0016_alter_cluster_name_and_more.py  0017_jobstats.py  0019_remove_allocationreview_allocations_last_mo_15e9ea_idx_and_more.py  0021_cluster_access_mode_cluster_access_teams.py  0021_cluster_access_mode_cluster_access_users.py  0021_job_delete_jobstats_job_allocations_jobid_61b20f_idx_and_more.py  0022_alter_cluster_access_teams.py  0022_remove_cluster_access_users_cluster_access_teams.py  (+4 more)
keystone_api/apps/authentication/: serializers.py  urls.py  views.py
keystone_api/apps/batch/: exceptions.py  models.py  references.py  serializers.py  shortcuts.py  urls.py  views.py
keystone_api/apps/cluster/: models.py  serializers.py  tasks.py  urls.py  views.py
keystone_api/apps/config/: serializers.py  urls.py  views.py
keystone_api/apps/factories/: providers.py
keystone_api/apps/health/: apps.py  backends.py  checks.py  urls.py  views.py
keystone_api/apps/logging/: admin.py  factories.py  middleware.py  models.py  nested.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
keystone_api/apps/metrics/: urls.py  views.py
keystone_api/apps/notifications/: admin.py  factories.py  mixins.py  models.py  permissions.py  serializers.py  shortcuts.py  tasks.py  urls.py  utils.py  views.py
keystone_api/apps/openapi/: urls.py
keystone_api/apps/research_products/: admin.py  factories.py  models.py  nested.py  permissions.py  serializers.py  urls.py  views.py
keystone_api/apps/scheduler/: __init__.py  apps.py  celery.py  checks.py
keystone_api/apps/stats/: serializers.py  urls.py  views.py
keystone_api/apps/users/: admin.py  apps.py  checks.py  factories.py  managers.py  mixins.py  models.py  nested.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
keystone_api/apps/version/: urls.py  views.py
keystone_api/fixtures/: testing_common.yaml
keystone_api/main/: asgi.py  settings.py  urls.py
keystone_api/plugins/: auditlog.py  email.py  filters.py  ordering.py  pagination.py  schemas.py  slurm.py
keystone_api/plugins/filter/: __init__.py  schemas.py
keystone_api/plugins/pagination/: __init__.py
keystone_api/plugins/slurm/: __init__.py
keystone_api/templates/: base.html  past_expiration.html  upcoming_expiration.html  upcoming_expiration2.html
keystone_api/tests/: utils.py
keystone_api/tests/allocations/: common.py  test_allocation_detail.py  test_allocation_list.py  test_allocation_request__status_choices.py  test_allocation_review__status_choices.py  test_allocations.py  test_allocations_pk.py  test_attachment_detail.py  test_attachment_list.py  test_attachments.py  test_attachments_pk.py  test_cluster_detail.py  test_cluster_list.py  test_clusters.py  test_clusters_pk.py  test_comment_detail.py  test_comment_list.py  test_comments.py  test_comments_pk.py  test_job_detail.py  test_job_list.py  test_jobs.py  test_jobs_pk.py  test_request_detail.py  test_request_list.py  test_request_status_choices.py  test_requests.py  test_requests_pk.py  test_review_detail.py  test_review_list.py  test_review_status_choices.py  test_reviews.py  test_reviews_pk.py
keystone_api/tests/authentication/: test_login.py  test_logout.py  test_whoami.py
keystone_api/tests/function_tests/: utils.py
keystone_api/tests/health/: test.py  test_health.py  test_json.py  test_prom.py  test_prometheus.py
keystone_api/tests/integration_tests/: test_ldap.py
keystone_api/tests/logging/: common.py  test_audit.py
keystone_api/tests/logs/: common.py  test_audit.py  test_requests.py  test_tasks.py
keystone_api/tests/metrics/: test.py
keystone_api/tests/notifications/: test_notification_detail.py  test_notification_list.py  test_notifications.py  test_notifications_pk.py  test_preference_detail.py  test_preference_list.py  test_preferences.py  test_preferences_pk.py
keystone_api/tests/openapi/: test_json.py  test_yaml.py
keystone_api/tests/research/: common.py  test_grant_list.py  test_grants.py  test_grants_pk.py  test_publication_detail.py  test_publication_list.py  test_publications.py  test_publications_pk.py
keystone_api/tests/stats/: test_grant_list.py  test_grants.py  test_publication_list.py  test_publications.py  test_request_list.py  test_requests.py
keystone_api/tests/users/: test_membership.py  test_membership_detail.py  test_membership_list.py  test_membership_pk.py  test_membership_roles.py  test_team_detail.py  test_team_list.py  test_team_membership__role_choices.py  test_teams.py  test_teams_pk.py  test_user_detail.py  test_user_list.py  test_users.py  test_users_pk.py
keystone_api/tests/version/: test.py  test_version.py
(+242 files in other folders)
