[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "keystone-api"
version = "0.0.0"
readme = "README.md"
description = "The backend REST API for the Keystone HPC utility."
authors = [{ name = "Better HPC LLC" }]
keywords = ["Better", "HPC", "keystone", "api"]
requires-python = ">=3.11,<4"
dependencies = [
    "django==5.2.13",
    "django-auditlog==3.4.1",
    "django-celery-beat==2.9.0",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.9.0",
    "django-environ==0.13.0",
    "django-filter==25.2",
    "django-health-check==4.2.2",
    "django-jazzmin==3.0.4",
    "django-prometheus==2.4.1",
    "djangorestframework==3.17.1",
    "drf_spectacular[sidecar]==0.29.0",
    "factory-boy==3.3.3",
    "faker==40.13.0",
    "flower==2.0.1",
    "html2text==2025.4.15",
    "iso4217==1.16.20260101",
    "jinja2==3.1.6",
    "nh3 (>=0.3.2,<0.4.0)",
    "pillow==12.2.0",
    "psycopg2-binary==2.9.11",
    "pyyaml==6.0.3",
    "redis==7.4.0",
    "servestatic==4.3.0",
    "tqdm==4.67.3",
    "uritemplate==4.2.0",
    "uvicorn==0.44.0",
]

[project.optional-dependencies]
ldap = ["django-auth-ldap==5.2.0"]
smtp = ["aiosmtpd==1.4.6"]
tests = ["coverage"]
all = ["django-auth-ldap==5.2.0", "aiosmtpd==1.4.6", "coverage"]

[tool.poetry.group.tests.dependencies]
coverage = { version = "*", optional = true }

[tool.poetry.group.ldap.dependencies]
django-auth-ldap = { version = "5.2.0", optional = true }

[tool.poetry.group.smtp.dependencies]
aiosmtpd = { version = "1.4.6", optional = true }

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "keystone_api/main/*",
]

[project.scripts]
keystone-api = "keystone_api.manage:main"
