[build-system]
requires = ["poetry-core==2.4.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "keystone-api"
version = "0.0.0"
readme = "README.md"
description = "The backend REST API for the Keystone HPC utility."
authors = [{ name = "Better HPC LLC" }]
keywords = ["Better", "HPC", "keystone", "api"]
requires-python = ">=3.11,<4"
dependencies = [
    "django==5.2.15",
    "django-auditlog==3.4.1",
    "django-celery-beat==2.9.0",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.9.0",
    "django-environ==0.14.0",
    "django-filter==25.2",
    "django-health-check==4.4.3",
    "django-jazzmin==3.0.5",
    "django-prometheus==2.5.0",
    "djangorestframework==3.17.1",
    "html2text==2025.4.15",
    "iso4217==1.16.20260101",
    "jinja2==3.1.6",
    "nh3==0.3.6",
    "psycopg2-binary==2.9.12",
    "servestatic==4.3.1",
    "uvicorn==0.49.0",
]

[project.optional-dependencies]
dev = ["coverage==7.15.2", "drf-spectacular[sidecar]==0.29.0", "factory-boy==3.3.3", "faker==40.27.0"]
prod = ["aiosmtpd==1.4.6", "flower==2.0.1", "redis==8.0.1", "django-auth-ldap==5.3.0"]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "keystone_api/main/*",
]

[project.scripts]
keystone-api = "keystone_api.manage:main"
